--- a/mod.ini
+++ b/mod.ini
@@ -1,13 +1,13 @@
 [Desc]
 Author="ace super"
 Title="ace cyber space tweaks"
-Version=1.5
+Version=1.8
 Description=""
 Date="2025-07-11"
 AuthorURL=""
 
 [Main]
-UpdateServer="https://github.com/acesuper/cyberspace-improvements-physics.git"
+UpdateServer="https://raw.githubusercontent.com/acesuper/cyberspace-improvements-physics/refs/heads/"
 SaveFile=""
 ID="C67F7BE6"
 IncludeDir0="."
