--- a/mod.ini
+++ b/mod.ini
@@ -7,7 +7,7 @@ Date="2025-07-11"
 AuthorURL=""
 
 [Main]
-UpdateServer="https://raw.githubusercontent.com/acesuper/cyberspace-improvements-physics/refs/heads/"
+UpdateServer=""
 SaveFile=""
 ID="C67F7BE6"
 IncludeDir0="."
