--- a/mod.ini
+++ b/mod.ini
@@ -10,7 +10,7 @@ AuthorURL=""
 UpdateServer="https://raw.githubusercontent.com/acesuper/cyberspace-improvements-physics/refs/heads/main"
 SaveFile=""
 ID="C67F7BE6"
-IncludeDir0="."
+IncludeDir0="main"
 IncludeDirCount=1
 DependsCount=0
 DLLFile=""
