--- a/mod.ini
+++ b/mod.ini
@@ -1,7 +1,7 @@
 [Desc]
 Author="ace super"
 Title="ace cyber space tweaks"
-Version=1.1
+Version=1.1b
 Description=""
 Date="2025-07-11"
 AuthorURL=""
